Firebase Storage configurado.
Archivo ignorado que contiene la apiKey y datos de conexión para
cloud firestore.
Métodos para guardar y obtener de la colección records de firebase.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ speed-measure-plugin*.json
 .settings/
 *.sublime-workspace
 *.swp
+src/environments/firebase.environment.ts
 
 # IDE - VSCode
 .vscode/*
